# aifactory-os.github.io

./: CHANGELOG.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  security_scan.py
.github/workflows/: release.yml  test-and-merge.yml
agents/: __init__.py  auto_agent.py  registry.py  sandbox.py
clients/: __init__.py  gemini_client.py  grok_fast_client.py  grok_web_client.py
core/: __init__.py  config.yaml  git_utils.py  logger.py  orchestrator.py
docs/: ARCHITECTURE.md  COLLABORATION_PROTOCOL.md  CONTRIBUTING.md  index.html  index.md  snapshot-latest.html
docs/agents/: registry.html
docs/architecture/: diagram.html
docs/tasks/: backlog.html
examples/crud-demo/: demo.sh
prompts/: error-analysis.json  error-analysis2.json  error-analysis3.json  error-analysis4.json  error-analysis6.json  grok41_ci_fix_prompt.md  progress_prompt.md  progress_prompt.md.reply.txt  v1_prompt.md  v1_prompt.md.reply.txt
shared/app/: __init__.py  main.py
tasks/: example_task_001.json  task_001.json  task_1000.json  task_1002.json  task_1003.json  task_1004.json  task_1005.json  task_999.json
tests/: conftest.py  test_api.py  test_imports.py
