[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aifactory_os"
version = "0.1.0"
description = "World's first open-source multi-agent software factory"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "rich",
    "pyyaml"
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "clients", "core", "shared"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-ra -vv"