[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifactory_os"
version = "0.1.0"
dependencies = [
    "structlog",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = [
    "core",
    "agents",
    "shared",
    "clients"
]

[tool.hatch.build.targets.wheel]
packages = ["agents", "clients", "core", "shared"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra -vv"
